# my_amr_project__

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: amcl_param.yaml  costmap_room.yaml
launch/: localisation.launch.py  myworld_.launch.py  planner_path.launch.py
maps/: myroom_map.pgm  myroom_map.yaml
msg/: ObjectDetect.msg
scripts/: auto_move.py  detection.py  path_goal.py
src/: goalpoints.cpp  goalpose.cpp
worlds/: myroom.world
